Workaround for Windows JPackage/Jlink issue