@@ -6,7 +6,7 @@
 
     <groupId>org.photoslide</groupId>
     <artifactId>PhotoSlide</artifactId>
-    <version>1.2.8</version>   
+    <version>1.2.9</version>   
 
     <!-- This description text is included in the Windows installer by default, see win-jpackage.txt -->
     <description>Photoslide is an app for managing and editing photos like Lightroom/ON1/...</description>
@@ -202,12 +202,12 @@
         <dependency>
             <groupId>org.librawfx</groupId>
             <artifactId>LibRawFX</artifactId>
-            <version>1.7.6</version>
+            <version>1.7.8</version>
         </dependency>
         <dependency>  
             <groupId>org.libheiffx</groupId>    
             <artifactId>LibHeifFX</artifactId>  
-            <version>1.1.2</version>  
+            <version>1.1.6</version>  
         </dependency>
         <dependency>
             <groupId>com.sothawo</groupId>
@@ -470,9 +470,7 @@
                         <release>${maven.compiler.target}</release>   
                         <fork>true</fork>
                         <compilerArgs>
-                            <arg>-J--illegal-access=permit</arg>   
-                            <arg>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</arg>                                
-                            <arg>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</arg>                     
+                            <arg>-J--illegal-access=permit</arg>                               
                         </compilerArgs>                                     
                     </configuration>
                 </plugin>
